redesigned the modal for all devices, added scroll feature for modals on smaller devices. Added the default scroll bar as well with blue logo color. And somehow fixed all the box's cards for all devices, so there's no Galaxy bug

--- a/assets/css/public.css
+++ b/assets/css/public.css
@@ -154,12 +154,11 @@ ul {
 	background-color: var(--box-drk-clr);
 	border: solid 2px black;
 	border-radius: 8px;
-	/* max-height: 365px; */
 	min-height: 400px;
-	/* min-width: 150px; */
+	width: auto;
 	max-width: 100%;
 	color: var(--lght-clr);
-	padding: 0.8rem;
+	padding: 0.4rem;
 	transition: all 200ms ease-out;
 }
 .box h5 {
